# Op-Monitoring

./: CMakeLists.txt  README.md
SRC/: data_sync_thread.cpp  data_sync_thread.h  event_blocks_widget.cpp  event_blocks_widget.h  expandable_item_delegate.h  functions.h  main.cpp  mainwindow.cpp  mainwindow.h  search_widget.cpp  search_widget.h  tree_widget.cpp  tree_widget.h
SRC/gui/: add_widgets.cpp  add_widgets.h  table_label.cpp  table_label.h
Settings/: config.json
Tests/: create_inner_tables.sql  create_trace_tables.sql  fill_db.py  test_data.sql
